finish test, add readme
